--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,5 +1,102 @@
 @use "vars" as *;
 
 #footer{
-
+	background: white;
+	padding: 39px 0 0;
+	a{
+		color: #0F1A2A;
+		&:hover{
+			color: $blue;
+		}
+	}
+	.inner{
+		@include flex(0,0,wrap);
+	}
+	.footer-note{
+		width: 38%;
+		border-right: 1px solid #E2E8F0;
+		padding: 0 15px 0 0;
+		@include mq(){
+			width: 100%;
+			padding: 0;
+			border: none;
+		}
+		p{
+			padding: 0 13% 0 0;
+			@include mq(){
+				padding: 0;
+			}
+		}
+	}
+	.footer-logo{
+		display: block;
+		max-width: 410px;
+		margin-bottom: 23px;
+		@include mq(){
+			width: 205px;
+			margin: 0 auto 20px;
+		}
+	}
+	.footer-menu{
+		border-right: 1px solid #E2E8F0;
+		width: 34%;
+		padding: 22px 5px 0 5%;
+		@include mq(){
+			display: none;
+		}
+		ul{
+			@include flex(between,0,wrap);
+			li{
+				width: 50%;
+				margin-bottom: 32px;
+				&:nth-child(2n){
+					width: 40%;
+				}
+			}
+		}
+	}
+	.footer-contact{
+		width: 28%;
+		padding: 20px 0 0 5%;
+		@include mq(){
+			display: none;
+		}
+		a{
+			display: block;
+			margin-bottom: 63px;
+		}
+	}
+	.footer-sns{
+		@include flex(0,0,wrap);
+		li{
+			margin-right: 20px;
+			&:last-child{
+				margin-bottom: 0;
+			}
+			a{
+				display: block;
+				margin-bottom: 0;
+				img{
+					width: 40px;
+				}
+			}
+		}
+	}
+	.copyright{
+		background: #0F1A2A;
+		@include font-size(14);
+		color: white;
+		margin: 57px 0 0 0;
+		padding: 20px 15px;
+		@include mq(){
+			margin: 30px 0 0;
+		}
+	}
+	.footer-ttl{
+		display: block;
+		text-transform: uppercase;
+		font-weight: bold;
+		color: #64748B;
+		margin-bottom: 22px;
+	}
 }
