--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -4,7 +4,7 @@
 	color: white;
 	min-height: 100vh;
 	text-align: center;
-	padding: 160px 15px 0;
+	padding: 160px 0 0;
 	//&:before{
 	//	content: "";
 	//	position: absolute;
@@ -33,6 +33,10 @@
 		padding: 10px 57px;
 		border-radius: 30px;
 		margin-bottom: 24px;
+		@include mq(){
+			@include font-size(14);
+			padding: 10px 40px;
+		}
 		&:before,&:after{
 			content: "";
 			width: 22px;
@@ -41,28 +45,48 @@
 			background-size: 100%;
 			position: absolute;
 			@include v-align;
+			@include mq(){
+				width: 15px;
+				height: 15px;
+			}
 		}
 		&:before{
 			left: 20px;
+			@include mq(){
+				left: 10px;
+			}
 		}
 		&:after{
 			right: 20px;
+			@include mq(){
+				right: 10px;
+			}
 		}
 	}
 	&__ttl{
 		display: block;
-		@include font-size(60);
+		//@include font-size(60);
+		font-size: clamp(26px,3.125vw,60px);
 		font-weight: bold;
 		line-height: 1.5;
 		letter-spacing: 0.5px;
+		@include mq(){
+			line-height: 1.4;
+		}
 	}
 }
 .mv-item{
 	@include font-size(24);
 	font-weight: 600;
 	margin-bottom: 19px;
+	@include mq(){
+		@include font-size(16);
+	}
 	p{
 		margin-bottom: 31px;
+		@include mq(){
+			margin-bottom: 20px;
+		}
 	}
 	&__ttl{
 		display: inline-block;
@@ -72,12 +96,19 @@
 		font-weight: 500;
 		padding: 0 130px;
 		margin-bottom: 41px;
+		@include mq(){
+			@include font-size(14);
+			padding: 0 40px;
+		}
 		&:before,&:after{
 			content: "";
 			width: 120px;
 			height: 2px;
 			position: absolute;
 			bottom: 6px;
+			@include mq(){
+				width: 30px;
+			}
 		}
 		&:before{
 			left: 0;
@@ -93,6 +124,9 @@
 	&__btn{
 		@include flex(center,center,wrap);
 		margin-bottom: 66px;
+		@include mq(){
+			margin-bottom: 30px;
+		}
 		a{
 			@include flex(center,center,wrap);
 			text-align: center;
@@ -104,21 +138,44 @@
 			border-radius: 8px;
 			margin: 0 15px;
 			border: 1px solid white;
+			@include mq(){
+				@include font-size(14);
+				width: 160px;
+				height: 46px;
+				margin: 0 5px;
+			}
+		}
+		&--default{
+			&:hover{
+				opacity: 1;
+				background: white;
+				color: #4F45F8;
+			}
 		}
 	}
 	&__option{
 		@include flex(center,center,wrap);
 		@include font-size(18);
 		font-weight: bold;
+		@include mq(sm){
+			@include font-size(14);
+		}
 		li{
 			position: relative;
 			padding: 0 0 0 30px;
 			margin: 0 26px;
+			@include mq(sm){
+				padding: 0 0 0 25px;
+				margin: 0 10px 15px;
+			}
 			img{
 				width: 24px;
 				position: absolute;
 				@include v-align;
 				left: 0;
+				@include mq(){
+					width: 18px;
+				}
 			}
 		}
 	}
@@ -142,9 +199,16 @@
 	&__ct{
 		width: 50%;
 		padding: 0 5% 0 0;
+		@include mq(){
+			width: 100%;
+			padding: 0;
+		}
 	}
 	&__img{
 		width: 50%;
+		@include mq(){
+			display: none;
+		}
 		&-item{
 			display: none;
 			&.active{
@@ -155,6 +219,9 @@
 }
 .setup-step{
 	margin-bottom: 38px;
+	@include mq(){
+		margin-bottom: 20px;
+	}
 	&__number{
 		display: block;
 		width: 70px;
@@ -166,9 +233,21 @@
 		position: absolute;
 		top: 17px;
 		left: 5px;
+		@include mq(){
+			width: 100%;
+			position: static;
+			@include flex(0,end,wrap);
+			margin-bottom: 10px;
+		}
 		span{
 			display: block;
 			@include font-size(40);
+			@include mq(){
+				font-size: 2.8rem;
+				margin: 0 0 0 9px;
+				position: relative;
+				top: 4px;
+			}
 		}
 	}
 	&__ct{
@@ -179,6 +258,9 @@
 			font-weight: bold;
 			padding: 0 0 0 45px;
 			margin-bottom: 10px;
+			@include mq(){
+				@include font-size(18);
+			}
 			&--img{
 				display: block;
 				width: 32px;
@@ -201,6 +283,16 @@
 				}
 			}
 		}
+		&-img{
+			display: none;
+			padding: 15px 0 0;
+			@include mq(md-min){
+				display: none !important;
+			}
+			&.active{
+				display: block;
+			}
+		}
 		p{
 			color: #94A3B8;
 		}
@@ -213,6 +305,10 @@
 		overflow: hidden;
 		color: #64748B;
 		margin-bottom: 16px;
+		@include mq(){
+			padding: 15px 0 15px 20px;
+			border-radius: 5px;
+		}
 		&:before{
 			content: "";
 			position: absolute;
@@ -224,6 +320,10 @@
 			@include smooth-transition;
 			opacity: 0;
 			visibility: hidden;
+			@include mq(){
+				width: 4px;
+				bottom: 0;
+			}
 		}
 		&:last-child{
 			margin-bottom: 0;
@@ -263,13 +363,23 @@
 	@include flex(0,0,wrap);
 	&__img{
 		width: 51.5%;
+		@include mq(lg){
+			width: 100%;
+			margin-bottom: 30px;
+		}
 		.img{
 			padding: 40px 0 0 0;
 			margin: 0 -28px 0 -29%;
+			@include mq(lg){
+				margin: 0;
+			}
 		}
 	}
 	&__ct{
 		width: 48.5%;
+		@include mq(lg){
+			width: 100%;
+		}
 	}
 }
 .ograni-list{
@@ -277,6 +387,9 @@
 		position: relative;
 		padding: 0 0 0 67px;
 		margin-bottom: 23px;
+		@include mq(){
+			padding: 0 0 0 50px;
+		}
 		&:last-child{
 			margin-bottom: 0;
 		}
@@ -285,6 +398,9 @@
 			position: absolute;
 			top: 0;
 			left: 10px;
+			@include mq(){
+				width: 30px;
+			}
 		}
 		p{
 			margin-bottom: 28px;
@@ -299,6 +415,11 @@
 		@include font-size(20);
 		font-weight: bold;
 		margin-bottom: 9px;
+		@include mq(){
+			@include font-size(18);
+			line-height: 1.6;
+			margin-bottom: 5px;
+		}
 	}
 }
 
@@ -306,23 +427,42 @@
 	background: white;
 	padding: 33px 0 95px;
 	margin-bottom: -1px;
+	@include mq(){
+		padding: 30px 0 50px;
+	}
 }
 .change-block{
 	@include flex(0,0,wrap);
 	&__ct{
 		width: 50%;
 		padding: 0 15px 0 0;
+		@include mq(lg){
+			width: 100%;
+			padding: 0;
+			order: 2;
+		}
 	}
 	&__img{
 		width: 50%;
+		@include mq(lg){
+			width: 100%;
+			margin: 0 0 30px;
+			order: 1;
+		}
 		.img{
 			margin: 0 -28.5% 0 0;
+			@include mq(lg){
+				margin: 0 -20px 0 0;
+			}
 		}
 	}
 }
 .sec-unlock{
 	background: #F0F4FF;
 	padding: 79px 0;
+	@include mq(){
+		padding: 50px 0;
+	}
 	.inner{
 		max-width: 1760px;
 	}
@@ -334,10 +474,19 @@
 	&__item{
 		width: 24.5%;
 		padding: 0 10px;
+		@include mq(){
+			width: 100%;
+			margin-bottom: 20px;
+		}
 	}
 	&__img{
 		width: 51%;
 		padding: 0 20px;
+		@include mq(){
+			width: 100%;
+			padding: 0 10px;
+			margin-bottom: 20px;
+		}
 		img{
 			width: 100%;
 		}
@@ -349,6 +498,11 @@
 		border-radius: 16px;
 		padding: 27px 23px 10px;
 		min-height: 197px;
+		@include mq(){
+			border-radius: 10px;
+			padding: 15px;
+			min-height: 100px;
+		}
 		&:last-child{
 			margin-bottom: 0;
 		}
@@ -357,18 +511,33 @@
 			font-weight: bold;
 			@include font-size(20);
 			margin-bottom: 5px;
+			@include mq(){
+				@include font-size(17);
+				position: relative;
+				padding: 0 0 0 40px;
+			}
+			&--icon{
+				display: block;
+				width: 40px;
+				margin-bottom: 10px;
+				@include mq(){
+					width: 30px;
+					position: absolute;
+					top: 0;
+					left: 0;
+				}
+			}
 		}
-		img{
-			display: block;
-			width: 40px;
-			margin-bottom: 10px;
-		}
+
 	}
 }
 
 .sec-security{
 	padding: 50px 0 93px;
 	color: white;
+	@include mq(){
+		padding: 50px 0;
+	}
 }
 .security-heading{
 	margin-bottom: 76px;
@@ -378,6 +547,9 @@
 	img{
 		display: block;
 		margin: 0 auto 10px;
+		@include mq(){
+			width: 84px;
+		}
 	}
 	p{
 		margin-bottom: 34px;
@@ -389,6 +561,13 @@
 	&__item{
 		width: 33.333%;
 		padding: 0 15px;
+		@include mq(){
+			width: 100%;
+			margin-bottom: 10px;
+			&:last-child{
+				margin-bottom: 0;
+			}
+		}
 	}
 	&__box{
 		background: #272B88;
@@ -396,19 +575,33 @@
 		position: relative;
 		@include flex(0,center,wrap);
 		padding: 15px 0;
+		@include mq(){
+			padding: 15px 10px;
+			border-radius: 10px;
+		}
 		img{
 			width: 80px;
+			@include mq(){
+				width: 40px;
+			}
 		}
 		p{
 			width: calc(100% - 80px);
 			padding: 0 5px 0 11px;
+			@include mq(){
+				width: calc(100% - 40px);
+				padding: 0 0 0 10px;
+			}
 		}
 	}
 }
 
 .sec-question{
 	background: white;
-	padding: 121px 0;
+	padding: 121px 0 80px;
+	@include mq(){
+		padding: 50px 0;
+	}
 }
 
 .question-block{
@@ -419,6 +612,7 @@
 		@include mq(){
 			width: 100%;
 			padding: 0;
+			margin-bottom: 30px;
 		}
 		p{
 			margin-bottom: 37px;
@@ -431,9 +625,12 @@
 			color: #4047E9;
 		}
 		.c-btn__01{
-			@include font-size(16);
 			color: white;
-			padding: 13px 30px;
+			@include mq(md-min){
+				@include font-size(16);
+
+				padding: 13px 30px;
+			}
 		}
 	}
 	&__ct{
@@ -454,6 +651,10 @@
 			@include smooth-transition;
 			padding: 24px 45px 24px 26px;
 			margin-bottom: 28px;
+			@include mq(){
+				padding: 15px 35px 15px 15px;
+				margin-bottom: 0;
+			}
 			&:after{
 				content: "";
 				width: 24px;
@@ -464,17 +665,30 @@
 				top: 24px;
 				right: 19px;
 				@include smooth-transition;
+				@include mq(){
+					width: 20px;
+					height: 20px;
+					top: 20px;
+					right: 10px;
+				}
 			}
 			dt{
 				cursor: pointer;
 				@include font-size(20);
 				font-weight: bold;
+				@include mq(){
+					@include font-size(18);
+				}
 			}
 			dd{
 				display: none;
 				color: #64748B;
 				@include fts(16,22);
 				padding: 10px 0 0;
+				@include mq(){
+					@include font-size(14);
+					line-height: 1.6;
+				}
 			}
 			&.active{
 				background: #F0F4FF;
@@ -485,8 +699,160 @@
 				dd{
 					padding-top: 20px;
 					padding-bottom: 20px;
+					@include mq(){
+						padding-top: 10px;
+						padding-bottom: 10px;
+					}
 				}
 			}
 		}
+	}
+}
+
+.sec-pricing{
+	color: white;
+	padding: 80px 0 129px;
+	@include mq(){
+		padding: 50px 0;
+	}
+	.inner{
+		max-width: 1175px;
+	}
+}
+.pricing-block{
+	@include flex(between,0,wrap);
+	color: #0F1A2A;
+	&__item{
+		width: 45.5%;
+		background: white;
+		border-radius: 8px;
+		overflow: hidden;
+		border-top: 8px solid #4047E9;
+		padding: 24px 17px 20px;
+		@include mq(){
+			width: 100%;
+			margin-bottom: 30px;
+			border-top: 4px solid #4047E9;
+			&:last-child{
+				margin-bottom: 0;
+			}
+		}
+	}
+	&__ttl{
+		display: block;
+		font-weight: bold;
+		@include font-size(32);
+		margin-bottom: 2px;
+		@include mq(){
+			@include font-size(24);
+			line-height: 1.4;
+			margin-bottom: 15px;
+		}
+	}
+	p{
+		margin-bottom: 51px;
+		@include mq(){
+			margin-bottom: 20px;
+		}
+	}
+	&__price{
+		display: block;
+		@include font-size(40);
+		font-weight: bold;
+		font-family: $font-Poppins;
+		margin-bottom: 29px;
+		@include mq(){
+			@include font-size(30);
+			margin-bottom: 10px;
+		}
+		small{
+			display: inline-block;
+			color: #64748B;
+			@include font-size(14);
+			position: relative;
+			margin: 0 0 0 4px;
+			top: -1px;
+		}
+	}
+	.c-btn__01{
+		&--arrow{
+			width: 100%;
+			height: 58px;
+			@include flex(center,center);
+			margin-bottom: 25px;
+			padding: 13px 15px;
+			@include mq(){
+				height: 46px;
+			}
+			&:after{
+				position: static;
+				transform: translateY(0);
+				display: inline-block;
+				margin: 0 0 0 15px;
+				@include mq(){
+					margin: 0 0 0 7px;
+				}
+			}
+		}
+	}
+	&__note{
+		margin: 0 -10px;
+		border-top: 1px solid #E2E8F0;
+		@include font-size(16);
+		font-weight: 500;
+		padding: 24px 10px 0;
+		@include mq(){
+			margin: 0 -15px;
+			padding: 24px 15px 0;
+		}
+		li{
+			padding: 0 0 0 28px;
+			position: relative;
+			margin-bottom: 24px;
+			@include mq(){
+				margin-bottom: 15px;
+			}
+			&:last-child{
+				margin-bottom: 0;
+			}
+			&:before{
+				content: "";
+				width: 20px;
+				height: 20px;
+				background: url("../img/check.png")no-repeat;
+				background-size: 100%;
+				position: absolute;
+				top: 2px;
+				left: 0;
+			}
+		}
+	}
+}
+
+.sec-mv{
+	.mv-heading,.mv-item,.mv-img,header{
+		opacity: 0;
+		visibility: hidden;
+	}
+
+}
+
+.is-hello{
+	.mv-heading,.mv-item,.mv-img,header{
+		opacity: 1;
+		visibility: visible;
+		transition: all 1s ease;
+	}
+	header{
+		transition-delay: 0.3s;
+	}
+	.mv-heading{
+		transition-delay: 0.5s;
+	}
+	.mv-item{
+		transition-delay: 0.7s;
+	}
+	.mv-img{
+		transition-delay: 1s;
 	}
 }
